--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <body>
     <div class="contaier">
         <div class="navigation">
-            <div class="langdiv">
+            <!-- <div class="langdiv">
                 <ul>
                     <li ><a href="index.html">Tr</a></li>
                     <li ><a class="lang1" href="indexEn.html">En</a></li>
                     <li ><a class="lang2" href="indexFr.html">Fr</a></li>
                     
                 </ul>
-            </div>
+            </div> -->
 
             <ul>
                 <li> <a href="#home" onclick="toggleMenu();">Home</a> </li>
